--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,8 @@ layout: default
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% comment %} endif {% endcomment %}
                     <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+                    <!-- 文章浏览量 -->
+                    <span class="meta" style="font-size: 15px" id="busuanzi_container_page_pv">浏览量：<span id="busuanzi_value_page_pv"></span></span>
                 </div>
             </div>
         </div>
