--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,11 +24,17 @@
                     <li>
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>
-                    {% for page in site.pages %}{% if page.title %}
+                    <li>
+                        <a href="https://about.me/Vove">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="{{ '/tags' | prepend: site.baseurl }}">TAGS</a>
+                    </li>
+                    <!-- {% for page in site.pages %}{% if page.title %}
                     <li>
                         <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                     </li>
-                    {% endif %}{% endfor %}
+                    {% endif %}{% endfor %}-->
                 </ul>
             </div>
         </div>
